| Summary: | ASTERISK-26537: AMI: NewConnectedLine event is not documented | ||
| Reporter: | Etienne Lessard (hexanol) | Labels: | |
| Date Opened: | 2016-10-31 13:45:12 | Date Closed: | 2016-11-01 11:26:01 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/ManagerInterface |
| Versions: | 13.12.1 14.1.1 GIT | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The documentation for the AMI event "NewConnectedLine" is missing from the source code (and from the wiki).
The event was added by ticket ASTERISK-24554. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-10-31 13:45:13.221-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2016-10-31 13:51:57.911-0500 Change 4242 had a related patch set uploaded by Etienne Lessard: manager: Add documentation for NewConnectedLine event. [https://gerrit.asterisk.org/4242|https://gerrit.asterisk.org/4242] By: Friendly Automation (friendly-automation) 2016-10-31 13:53:12.662-0500 Change 4243 had a related patch set uploaded by Etienne Lessard: manager: Add documentation for NewConnectedLine event. [https://gerrit.asterisk.org/4243|https://gerrit.asterisk.org/4243] By: Friendly Automation (friendly-automation) 2016-10-31 13:53:57.585-0500 Change 4244 had a related patch set uploaded by Etienne Lessard: manager: Add documentation for NewConnectedLine event. [https://gerrit.asterisk.org/4244|https://gerrit.asterisk.org/4244] By: Friendly Automation (friendly-automation) 2016-11-01 11:26:02.740-0500 Change 4244 merged by zuul: manager: Add documentation for NewConnectedLine event. [https://gerrit.asterisk.org/4244|https://gerrit.asterisk.org/4244] By: Friendly Automation (friendly-automation) 2016-11-01 12:03:47.651-0500 Change 4242 merged by zuul: manager: Add documentation for NewConnectedLine event. [https://gerrit.asterisk.org/4242|https://gerrit.asterisk.org/4242] By: Friendly Automation (friendly-automation) 2016-11-01 12:09:52.666-0500 Change 4243 merged by George Joseph: manager: Add documentation for NewConnectedLine event. [https://gerrit.asterisk.org/4243|https://gerrit.asterisk.org/4243] | ||